# brain-games

./: .codeclimate.yml  Makefile  README.md  pyproject.toml
brain_games/: .codeclimate.yml  .gitignore  brain_games.py  cli.py  dialog.py  pattern.py
brain_games/games/: brain_calc_engine.py  brain_even_engine.py  brain_gcd_engine.py  brain_prime_engine.py  brain_progression_engine.py  calc_logic.py  even_logic.py  gcd_logic.py  prime_logic.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
