[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Educational project with five mathematical console games"
authors = ["Vorobyev <nikos1997@yandex.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = 'https://github.com/proggressor/python-project-49'

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
